--- a/force-app/main/default/classes/SummitEventsRegisterController.cls
+++ b/force-app/main/default/classes/SummitEventsRegisterController.cls
@@ -36,6 +36,7 @@ public with sharing class SummitEventsRegisterController {
     public Boolean adminOpen { get; set; }
     public String registrantAudience { get; set; }
     public Id incomingEventRegistrationId { get; set; }
+    public String formattedStartDate { get; set; }
 
     public SummitEventsRegisterController() {
         //array for looping through additional information questions
@@ -95,6 +96,8 @@ public with sharing class SummitEventsRegisterController {
             startTimeString = SeaShared.formatTime(evtInstance.Instance_Start_Time__c, false);
             endTimeString = SeaShared.formatTime(evtInstance.Instance_End_Time__c, false);
         }
+
+        formattedStartDate = formattedGmtVersionOfDate(evtInstance.Instance_Start_Date__c, evtInstance.Instance_Start_Time__c, evtInstance.Instance_Time_Zone__c);
 
         //Get Event Info off of instance master detail id
         if (!String.isBlank(eventInformation.eventId)) {
@@ -329,6 +332,13 @@ public with sharing class SummitEventsRegisterController {
             }
         }
         return cpl;
+    }
+
+    public String formattedGmtVersionOfDate(Date aDate, Time aTime, String timeZoneString) {
+        String formattedString = '';
+        Datetime newDateTime = Datetime.newInstanceGmt(aDate.year(), aDate.month(), aDate.day(), aTime.hour(), aTime.minute(), aTime.second());
+        formattedString = newDateTime.formatGmt('EEEE MMMM dd, ') + newDateTime.year();
+        return formattedString;
     }
 
     public List<SelectOption> PickThePicklist(String YourObjectName, String YourFieldName, Boolean includeSelect) {
