Added test for Add to calendar page

--- a/force-app/main/default/classes/SummitEventsTestSharedDataFactory.cls
+++ b/force-app/main/default/classes/SummitEventsTestSharedDataFactory.cls
@@ -48,8 +48,7 @@ public with sharing class SummitEventsTestSharedDataFactory {
                 Location_Title__c = 'A location',
                 Location_Map_Link__c = 'Map Link 1',
                 Location_Address__c = '123 Electric Ave.',
-                Location_Type__c = 'On-Site',
-                Contact_Matching_Rules__c = matchingRules
+                Location_Type__c = 'On-Site'
         );
 
         if (String.isNotBlank(registrationEmailRestriction)) {
@@ -127,6 +126,7 @@ public with sharing class SummitEventsTestSharedDataFactory {
                 Instance_Start_Time__c = Time.newInstance(8, 0, 0, 0),
                 Instance_End_Date__c = Date.today().addDays(1),
                 Instance_End_Time__c = Time.newInstance(14, 0, 0, 0),
+                Instance_Time_Zone__c = 'Central Daylight Time (America/Chicago)',
                 Active_Status__c = 'Active',
                 Capacity__c = 500,
                 Location_Title_Override__c = 'A location',
